# modelgardens-agents

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
dev/agents/: agent.py
dev/agents/code/: code_agent.py  openhands_tool.py
dev/agents/gdrive/: drive_agent.py  drive_tools.py
dev/agents/tools/: query_gum.py
dev/scripts/: annotate.py  concat_for_annotation.py  export_default_next_steps.py  filter_drop_project.py  plot_annotation_correlation.py  plot_annotation_histograms.py  scratchpad_inspector.py  test_slidev_mcp.py  test_ui_notification.py
dev/survey/: pipeline_run.agent_candidates.csv  pipeline_run.agent_tasks.csv  pipeline_run.agent_tasks.scored.csv  pipeline_run.agent_tasks.single_scored.csv  pipeline_run.csv  pipeline_run.future_goals.csv  pipeline_run.goals_milestones.csv  pipeline_run.proposals.csv  pipeline_run_no_next_steps.csv  pipeline_run_no_objectives.csv  pipeline_run_v2.csv  pipeline_run_v3.csv  scratchpad_sim.db  scratchpad_sim2.db
dev/survey/swiftui-survey/: Package.swift  README.md  agent_results_autometrics_release.json
dev/test/: scratchpad.txt  scratchpad2.txt
src/interface/PrecursorApp/: Package.swift  README.md
src/precursor/: main.py
tests/components/: conftest.py  test_current_project_classifier.py  test_current_project_classifier_integration.py
tests/context/: test_utils.py
tests/managers/: test_agent_manager.py  test_state_manager.py
tests/mcp/: conftest.py  test_coder_server.py  test_drive_server.py  test_gum_server.py  test_mcp_loader_and_utils.py  test_scratchpad_artifacts.py  test_toolset_builder.py
tests/observers/: test_csv_simulator.py  test_project_transition_observer.py
tests/scratchpad/: conftest.py  test_render.py  test_resources.py  test_scratchpad_tools.py  test_store.py
(+90 files in other folders)
