[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "precursor"
version = "0.1.0"
description = "MCP-enabled background agent + scratchpad"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Michael Ryan" }
]

# optional but nice
dependencies = [
  "platformdirs",
  "pyyaml",
  "gum-ai",
  "python-dotenv",
  "ics",
  "aiohttp",
  "dspy",
  "pynput",
  "matplotlib",
  "pandas",
  "pydantic",
  "mcp2py",
  "fastmcp",
  "mcp-server-fetch",
  "google-api-python-client",
  "google_auth_oauthlib",
  "gitpython",
  "openhands-ai"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
# if you only want precursor.* and not other junk, you can do:
# include = ["precursor*"]