[project]
name = "modelgardens-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "dspy>=3.0.4",
    "fastmcp>=2.13.3",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "mcp2py>=0.6.0",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
]
